--- a/Test a Perceptual Phenomenon.ipynb
+++ b/Test a Perceptual Phenomenon.ipynb
@@ -36,13 +36,16 @@
     "\n",
     "**The alternative hypothesis**: The words being incongruent causes an increase in time taken to name the color of the word ink\n",
     "\n",
+    "These subscripts will be used throughout this document to represent the respective conditions:<br>\n",
     "$i : incongruent$<br>\n",
     "$c : congruent$\n",
+    "\n",
+    "\n",
     "\n",
     "$$H_o: \\mu_i \\leq \\mu_c$$\n",
     "$$H_a: \\mu_i \\gt \\mu_c$$\n",
     "\n",
-    "I will be using a positive one-tailed t-test to test this hypothesis. My hypothesis is assuming the incongruent condition will cause an increase in the time taken to name the colors, therefore there is no need to test for the negative direction.   "
+    "I will be using a positive one-tailed t-test to test this hypothesis. My hypothesis assumes that the incongruent condition will cause an increase in the time taken to name the colors, therefore there is no need to test for the negative direction.   "
    ]
   },
   {
@@ -54,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -155,7 +158,7 @@
     "        congruent.append(float(row[0]))\n",
     "        incongruent.append(float(row[1]))\n",
     "    \n",
-    "#Calculate the mean and sample standard deviation   \n",
+    "#Calculate the mean and sample standard deviation for both result sets\n",
     "congruent_mean = np.mean(congruent)\n",
     "incongruent_mean = np.mean(incongruent)\n",
     "congruent_std = np.std(congruent, ddof=1)\n",
@@ -235,20 +238,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "8.02070694411 2.05150029286e-08\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "n = 24\n",
-    "df= n-1  #Degree of Freedom\n",
+    "#Degree of Freedom\n",
+    "df= n-1\n",
     "\n",
     "#Calculate t-critical for alpha = 0.05\n",
     "alpha = 0.05\n",
@@ -271,8 +267,6 @@
     "\n",
     "#Calculate P-value\n",
     "p_val = stats.t.sf(t_stat,df)\n",
-    "\n",
-    "print(t_stat, p_val)\n",
     "\n"
    ]
   },
@@ -285,7 +279,7 @@
     "$t(24) = 8.02, p = 2.05\\mathrm{e}{-08}$, one-tailed\n",
     "\n",
     "Based on the above results ( **P-value** $\\lt \\alpha$ ), we can reject the null hypothesis with a high degree of confidence ( $p = 2.05\\mathrm{e}{-08}$ ).<br> \n",
-    "We can conclude there was a significant increase in time taken to name ink colors for words in an incongruent condition compared to a congruent condition. The results of this test confiremd the expected effect of making the words incongruent."
+    "We can therefore conclude that the mean increase in time taken ( $\\overline{X}_D = 7.96$ seconds ) to name ink colors for words in an incongruent condition compared to a congruent condition is statistically significant. The results of this test confiremd the expected effect that the words being incongruent increases the time it takes for participants to name the ink color."
    ]
   },
   {
@@ -299,7 +293,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "--write answer here--"
+    "The effect seems to be related to how reading comes so naturally to the brain it actually requires effort to prevent the brain from carrying out that cognitive function. Although not necessarily a task, but a similiar phenomenon can be observed when watching a movie with subtitles. It requires a bit of concentration to prevent oneself from reading a movie line before hearing it. It turns out this phenomenon has been studied and is referred to as 'interference'.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "*Resources:*<br> \n",
+    "https://stackoverflow.com<br>\n",
+    "https://d2l.deakin.edu.au/d2l/eP/presentations/presentation_preview_popup.d2l?presId=67655"
    ]
   }
  ],
